--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -5,6 +5,65 @@
         background: rgba(255, 255, 255, 0.45)
         backdrop-filter: blur(4px)
         width: 100%
+.header
+    &__all-counter
+        position: relative
+        padding-left: 55px
+        font-weight: bold
+        font-size: 36px
+        color: #E30517
+        line-height: 1.2
+        margin-right: 2.8vw
+        span
+            position: absolute
+            bottom: -10px
+            left: 0
+            font-size: 11px
+            font-weight: normal
+            color: #ffffff
+            white-space: nowrap
+        &::before
+            content: ''
+            display: block
+            margin-right: 2px
+            width: 55px
+            height: 55px
+            background: url(../img/page-nav/header-star.svg) no-repeat center
+            background-size: 100% 100%
+            position: absolute
+            bottom: 0
+            left: 0
+    &-main
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        z-index: 8
+        .header
+            &__user
+                &-counter
+                    display: flex
+                    align-items: center
+                    margin-right: 5px
+                    &::before
+                        content: ''
+                        display: block
+                        margin-right: 2px
+                        width: 30px
+                        height: 30px
+                        background: url(../img/icons/star-gradient.svg) no-repeat center
+                        background-size: 100% 100%
+    &__user
+        &-counter
+            position: relative
+            span
+                position: absolute
+                bottom: -7px
+                left: 0
+                font-size: 11px
+                font-weight: normal
+                color: #ffffff
+                white-space: nowrap
 .header__user-avatar
     position: relative
     cursor: pointer
@@ -1207,3 +1266,38 @@
 .station__map
     background: url(../img/map-v2.jpg) no-repeat center left
     background-size: cover
+
+.nav-page-bans
+    padding: 15px 0
+    .wrapper
+        display: flex
+        justify-content: space-between
+        width: 980px
+        max-width: 90%
+        margin: 0 auto
+    .img
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-bottom: 13px
+        height: 51px
+        img
+            display: block
+    a
+        display: block
+        padding: 24px 4% 10px
+        background: #e61e2e
+        color: #ffffff
+        font-size: 12px
+        text-align: center
+        letter-spacing: 0.08em
+        text-decoration: none
+        width: 23.5%
+        height: 145px
+        b
+            font-weight: 900
+            font-size: 14px
+            display: block
+            line-height: 1
+            text-transform: uppercase
+            margin-bottom: -2px
