--- a/sass/media.sass
+++ b/sass/media.sass
@@ -274,6 +274,7 @@
         position: relative
         top: auto
         left: auto
+        background: #0963e9
         .header
             &__wrapper
                 flex-direction: column
@@ -282,7 +283,7 @@
             &__all-counter,
             &__user-counter 
                 span
-                    color: #000000
+                    // color: #000000
     .nav-page-bans
         padding-bottom: 5px
         .wrapper
