--- a/sass/media.sass
+++ b/sass/media.sass
@@ -22,7 +22,6 @@
         width: 335px
     .station__map
         width: calc( 100% - 335px )
-        padding-right: 7%
         &-btn
             left: auto
             right: 10%
@@ -414,7 +413,8 @@
                 margin-bottom: 40px
         &__map
             width: 100%
-            padding-bottom: 350px
+            padding-top: 45px
+            padding-bottom: 50px
 
     .media-page
         .header
@@ -676,6 +676,8 @@
             height: 20px
             img
                 width: 100%
+    .station__map-stars a:nth-child(7)
+        top: 27%
 
 @media screen and (max-width: 455px )
     .station__map-heading
@@ -941,7 +943,7 @@
             padding: 20vw 5% 60vw
 
     .station__map-heading
-        font-size: 24px
+        font-size: 22px
 
     .popup__login
         width: 100%
