--- a/css/styles.css
+++ b/css/styles.css
@@ -1425,9 +1425,106 @@
       .station__main-timer .etUnit .etNumber:nth-child(2) {
         text-align: left !important; }
 
+.station__main {
+  width: calc( 50% - 360px ); }
+
 .station__map {
-  background: url(../img/map-v2.jpg) no-repeat center left;
-  background-size: cover; }
+  background: url(../img/travel/bg.jpg) no-repeat center left;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: calc( 50% + 360px );
+  position: relative; }
+  .station__map-btn {
+    left: auto;
+    right: 25%; }
+  .station__map::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../img/travel/parab.png) no-repeat center left;
+    background-size: 100%;
+    z-index: 1;
+    pointer-events: none; }
+  .station__map::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(250deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.15));
+    pointer-events: none; }
+  .station__map-block {
+    width: 100%;
+    position: relative; }
+  .station__map-img {
+    display: block;
+    width: 100%; }
+  .station__map-road {
+    position: absolute;
+    top: 17.5%;
+    left: 2%;
+    z-index: 2;
+    width: 80%; }
+    .station__map-road > img {
+      width: 100%; }
+  .station__map-bot {
+    height: 20%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden; }
+    .station__map-bot img {
+      width: 35%;
+      position: absolute;
+      top: 0;
+      left: -5%; }
+      .station__map-bot img:last-child {
+        left: auto;
+        right: -5%;
+        top: -10px; }
+  .station__map-stars img {
+    width: 100%; }
+  .station__map-stars a {
+    display: block;
+    z-index: 3;
+    position: absolute;
+    width: 6.25%; }
+    .station__map-stars a:nth-child(1) {
+      top: 25%;
+      left: 16%; }
+    .station__map-stars a:nth-child(2) {
+      top: 48%;
+      left: 6%; }
+    .station__map-stars a:nth-child(3) {
+      top: 75%;
+      left: 3.5%; }
+    .station__map-stars a:nth-child(4) {
+      top: 91%;
+      left: 3%; }
+    .station__map-stars a:nth-child(5) {
+      top: 57%;
+      left: 19%; }
+    .station__map-stars a:nth-child(6) {
+      top: 32%;
+      left: 39%; }
+    .station__map-stars a:nth-child(7) {
+      top: 30.5%;
+      left: 60%; }
+    .station__map-stars a:nth-child(8) {
+      top: 41%;
+      left: 96%; }
 
 .nav-page-bans {
   padding: 15px 0; }
