--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1262,10 +1262,102 @@
             &:nth-child(2)
                 text-align: left!important
 
-
+.station__main
+    width: calc( 50% - 360px )
 .station__map
-    background: url(../img/map-v2.jpg) no-repeat center left
+    background: url(../img/travel/bg.jpg) no-repeat center left
     background-size: cover
+    display: flex
+    align-items: center
+    width: calc( 50% + 360px )
+    position: relative
+    &-btn
+        left: auto
+        right: 25%
+    &::before
+        content: ''
+        display: block
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background: url(../img/travel/parab.png) no-repeat center left
+        background-size: 100%
+        z-index: 1
+        pointer-events: none
+    &::after
+        content: ''
+        display: block
+        position: absolute
+        top: 0
+        right: 0
+        width: 100%
+        height: 100%
+        background: linear-gradient(250deg, rgba(0,0,0,0.6), rgba(0,0,0,0.15))
+        pointer-events: none
+    &-block
+        width: 100%
+        position: relative
+    &-img
+        display: block
+        width: 100%
+    &-road
+        position: absolute
+        top: 17.5%
+        left: 2%
+        z-index: 2
+        width: 80%
+        & > img
+            width: 100%
+    &-bot
+        height: 20%
+        position: absolute
+        bottom: 0
+        left: 0
+        width: 100%
+        overflow: hidden
+        img
+            width: 35%
+            position: absolute
+            top: 0
+            left: -5%
+            &:last-child
+                left: auto
+                right: -5%
+                top: -10px
+    &-stars
+        img
+            width: 100%
+        a
+            display: block
+            z-index: 3
+            position: absolute
+            width: 6.25%
+            &:nth-child(1)
+                top: 25%
+                left: 16%
+            &:nth-child(2)
+                top: 48%
+                left: 6%
+            &:nth-child(3)
+                top: 75%
+                left: 3.5%
+            &:nth-child(4)
+                top: 91%
+                left: 3%
+            &:nth-child(5)
+                top: 57%
+                left: 19%
+            &:nth-child(6)
+                top: 32%
+                left: 39%
+            &:nth-child(7)
+                top: 30.5%
+                left: 60%
+            &:nth-child(8)
+                top: 41%
+                left: 96%
 
 .nav-page-bans
     padding: 15px 0
